--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@coreui/coreui": "^4.2.6",
+    "@coreui/vue": "^4.5.0",
+    "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "sass-loader": "^13.2.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -18,7 +22,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.57.1"
   },
   "eslintConfig": {
     "root": true,
