--- a/package.json
+++ b/package.json
@@ -3,27 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "@babel/plugin-proposal-function-bind": "^7.18.9",
+    "@babel/plugin-proposal-function-sent": "^7.18.6",
+    "@babel/plugin-proposal-throw-expressions": "^7.18.6",
+    "@babel/plugin-transform-object-assign": "^7.18.6",
+    "@babel/plugin-transform-typescript": "^7.20.7",
     "@coreui/coreui": "^4.2.6",
     "@coreui/vue": "^4.5.0",
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "sass-loader": "^13.2.0",
-    "vue": "^3.2.13"
+    "ts-loader": "^9.4.2",
+    "vue": "^3.2.13",
+    "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "typescript": "~4.5.5"
   },
   "eslintConfig": {
     "root": true,
@@ -32,10 +44,11 @@
     },
     "extends": [
       "plugin:vue/vue3-essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {}
   },
